--- a/index.html
+++ b/index.html
@@ -225,13 +225,13 @@
 
       <!-- Section: Social -->
       <section class="text-center mb-5">
-        <a href="https://www.linkedin.com/in/le-phuong-36992515b/" class="text-white me-4">
+        <a href="https://www.linkedin.com/in/phuong-le-36992515b/" target="_blank" class="text-white me-4">
           <i class="fab fa-linkedin fa-2x"></i>
         </a>
-        <a href="mailto:phuongltt.hvsg@gmail.com" class="text-white me-4">
+        <a href="mailto:phuongltt.hvsg@gmail.com" target="_blank" class="text-white me-4">
           <i class="fab fa-google fa-2x"></i>
         </a>
-        <a href="https://github.com/Finn-12/" class="text-white me-4">
+        <a href="https://github.com/Finn-12/" target="_blank" class="text-white me-4">
           <i class="fab fa-github  fa-2x"></i>
         </a>
       </section>
