update profile pic

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <div class="col-md-3 text-center">
                 <div class="about-image" data-aos="fade-right" data-aos-delay="150">
-                    <img src="./img/pro_pic.jpg" alt="" style="max-height: 288px;" class="img-fluid">
+                    <img src="./img/profile_pic.jpg" alt="" style="max-height: 288px;" class="img-fluid">
                 </div>
             </div>
             <div class="col-md-3 text-center">
