--- a/index.html
+++ b/index.html
@@ -152,6 +152,30 @@
                     I performed LinkedIn scraping using Selenium and Chromedriver for login automation and BeautifulSoup4 for profile URL extraction. The implementation handles multiple pages and saves data in a CSV file for analysis and storage.</p>
               </div>
         </div>
+        <div class="thumbnail-section col-md-6 col-lg-4 col-ms-12 text-center">
+          <div class="thumbnail" data-aos="fade-up" data-aos-delay="150">
+              <a href="https://github.com/Finn-12/SQLHospital-repo"><img class="thumnail-img" src="img/work-4.png" href="#" width="300" /></a>
+              <a href="https://github.com/Finn-12/SQLHospital-repo"><p class="thumbnail-title"><strong>Hospital-Pharmacy SQL Schema Design & Database Construction</strong></p></a>
+              <p class="thumbnail-graph">
+                I created a robust SQL database schema for a healthcare system. Designed tables for doctors, patients, drugs, prescriptions, transactions, employees, and drug companies. Populated the database with sample data to simulate real-world scenarios. Ready for efficient data management and analysis.</p>
+            </div>
+        </div>
+        <div class="thumbnail-section col-md-6 col-lg-4 col-ms-12 text-center">
+          <div class="thumbnail" data-aos="fade-up" data-aos-delay="150">
+              <a href="https://github.com/Finn-12/AssociationRuleMining/blob/main/TitanicASM.ipynb"><img class="thumnail-img" src="img/work-5.png" href="#" width="340" /></a>
+              <a href="https://github.com/Finn-12/AssociationRuleMining/"><p class="thumbnail-title"><strong>Data Analysis with Apriori Algorithm</strong></p></a>
+              <p class="thumbnail-graph">
+                I conducted a data analysis using the Apriori algorithm in R, exploring associations in the Titanic dataset. Discover insights on passenger class, age, gender, and survival rates. See the rules and visualizations to understand the dataset better.</p>
+            </div>
+        </div>
+        <div class="thumbnail-section col-md-6 col-lg-4 col-ms-12 text-center">
+        <div class="thumbnail" data-aos="fade-up" data-aos-delay="150">
+            <a href="https://github.com/Finn-12/Adult_income_knn-repo/blob/main/adult_income_knn.ipynb"><img class="thumnail-img" src="img/work-6.png" href="#" width="300" /></a>
+            <a href="https://github.com/Finn-12/Adult_income_knn-repo/blob/main/adult_income_knn.ipynb"><p class="thumbnail-title"><strong>R Analysis and Model Evaluation using knn algorithms</strong></p></a>
+            <p class="thumbnail-graph">
+              I conducted R analysis using caret and knn algorithms. Built a knn_model for a binary classification task. Evaluated the model's performance on a test dataset. Achieved an accuracy of 96.6% for class 0 and 96.6% for class 1. Confusion matrix and other metrics were analyzed to assess the model's quality.</p>
+          </div>
+        </div>
       </div>
     </div>
 </section>
