--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="thumbnail-section col-md-6 col-lg-4 col-ms-12 text-center">
         <div class="thumbnail" data-aos="fade-up" data-aos-delay="150">
             <a href="https://github.com/Finn-12/Adult_income_knn-repo/blob/main/adult_income_knn.ipynb"><img class="thumnail-img" src="img/work-6.png" href="#" width="300" /></a>
-            <a href="https://github.com/Finn-12/Adult_income_knn-repo/blob/main/adult_income_knn.ipynb"><p class="thumbnail-title"><strong>R Analysis and Model Evaluation using knn algorithms</strong></p></a>
+            <a href="https://github.com/Finn-12/Adult_income_knn-repo/"><p class="thumbnail-title"><strong>R Analysis and Model Evaluation using knn algorithms</strong></p></a>
             <p class="thumbnail-graph">
               I conducted R analysis using caret and knn algorithms. Built a knn_model for a binary classification task. Evaluated the model's performance on a test dataset. Achieved an accuracy of 96.6% for class 0 and 96.6% for class 1. Confusion matrix and other metrics were analyzed to assess the model's quality.</p>
           </div>
