--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <div class="thumbnail" data-aos="fade-up" data-aos-delay="150">
                 <a href="https://github.com/Finn-12/BikeStores"><img class="thumnail-img" src="img/work-1.png" href="#" width="300" /></a>
                 <a href="https://github.com/Finn-12/BikeStores"><p class="thumbnail-title"><strong>BikeStore Database and Dashboard Development</strong></p></a>
-                <p class="thumbnail-graph">The BikeStore project is a comprehensive SQL database that extracts data for analysis. It features an interactive Tableau dashboard with slicers for intuitive filtering and utilizes Tableau for powerful data visualization. </p>
+                <p class="thumbnail-graph">The BikeStore project is a comprehensive SQL database that extracts data for analysis. It features an interactive Excel dashboard with slicers for intuitive filtering and utilizes Tableau for powerful data visualization. </p>
               </div>
         </div>
         <div class="thumbnail-section col-md-6 col-lg-4 col-ms-12 text-center">
